[tool.poetry]
name = "blocksmithlabs-verify"
version = "0.1.0"
description = ""
authors = ["AromatUspexa <rtomilkin@gmail.com>"]
readme = "README.md"
packages = [{include = "blocksmithlabs_verify"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
